include_directories(.)

add_executable(con_destructor con_destructor.cpp)
add_executable(this_const this_const.cpp)
add_executable(friend friend.cpp)
add_executable(operator operator.cpp)
add_executable(inherit inherit.cpp)
add_executable(virtual virtual.cpp)
add_executable(virtual2 virtual2.cpp)
add_executable(class_static class_static.cpp)
add_executable(pure_virtual pure_virtual.cpp)
add_executable(rtti rtti.cpp)
add_executable(multi_inherit multi_inherit.cpp)
add_executable(move_semantics move_semantics.cpp)